# Computer-graphics

./: CMakeLists.txt
src/hw_1/: main.cpp
src/hw_2/: main.cpp
src/hw_3/: ex_3_1.cpp  ex_3_2.cpp
src/hw_4/: main.cpp
